Fix footer spacing

--- a/css/layout.css
+++ b/css/layout.css
@@ -23,7 +23,7 @@ footer > a {
 	border-radius: 5px;
 	padding: 15px;
 	font-size: 20px;
-	margin: 10px 15px 5px 5px;
+	margin: 1rem 0;
 	display: flex;
 	justify-content: space-between;
 }
